fixed nav logo distorted

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -17,7 +17,6 @@ body {
 }
 
 .nav-logo {
-    height: 5rem;
     width: 5rem;
 }
 
